@@ -4,7 +4,9 @@ PHP Speedy Web Service client library @@VERSION
 
 CHANGE LOG
 * Version 2.6.0
-  - New property "servingOfficeId" is added in class ResultSite
+  - Added "parcels" property in ParamCalcaluation
+  - New property "returnCityCenterIfNoAddress" added in ParamAddressSearch
+  - New properties "servingOfficeId", "coordX", "coordY", "coordType" are added in class ResultSite
   - New type ResultWorkingTime is introduced to specify office working time
   - New properties "maxParcelDimensions", "maxParcelWeight" and "workingTimeSchedule" are added in class ResultOfficeEx
   - New method getPickingDeliveryInfo() is available.
